# ticket-price-in-rust-ddd

./: .env  Cargo.toml  README.md  TODO.md  diesel.toml  docker-compose.yml
app/: Cargo.toml  build.rs
app/src/: domain.rs  main.rs
app/src/controller/: order.rs
app/src/domain/: model.rs  service.rs
app/src/domain/model/: order.rs
app/src/domain/service/: ticket_price.rs
app/src/infra/db/: model.rs
app/src/infra/db/repository/: order.rs
app/src/infra/db/service/: ticket_price.rs
app/src/registry/: usecase.rs
app/src/registry/service/: ticket_price.rs
app/src/registry/usecase/: order.rs
app/src/usecase/: order.rs
controller/: Cargo.toml
controller/src/: lib.rs  order.rs
domain/: Cargo.toml
domain/src/model/: order.rs  ticket_price.rs
domain/src/repository/: order.rs
domain/src/service/: ticket_price.rs
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/db/repository/: order.rs
infra/src/db/service/: ticket_price.rs
migrations/2021-08-23-122804_create_movies/: down.sql  up.sql
migrations/2021-08-23-122809_create_orders/: down.sql  up.sql
migrations/2021-08-23-235510_create_customer_type_discounts/: down.sql  up.sql
order/: Cargo.toml
order/proto/: movie-ticket-api.proto
order/src/: main.rs  registry.rs
order/src/domain/model/: ticket_price.rs
order/src/domain/repository/: order.rs
order/src/infra/db/: schema.rs  service.rs
order/src/registry/: service.rs
proto/: movie-ticket-api.proto
registry/: Cargo.toml
registry/src/: lib.rs  repository_registry.rs  service_registry.rs  usecase_registry.rs
registry/src/service_registry/: ticket_price.rs
registry/src/usecase_registry/: order.rs
src/: main.rs  order.rs  schema.rs
src/order/: registry.rs
src/order/controller/: order.rs
src/order/domain/model/: order.rs  ticket_price.rs
src/order/domain/repository/: order.rs
src/order/domain/service/: ticket_price.rs
src/order/infra/: db.rs
src/order/infra/db/: model.rs
src/order/infra/db/repository/: order.rs
src/order/infra/db/service/: ticket_price.rs
src/order/registry/: repository.rs  service.rs  usecase.rs
src/order/registry/service/: ticket_price.rs
src/order/registry/usecase/: order.rs
src/order/usecase/: order.rs
usecase/: Cargo.toml
usecase/src/: lib.rs  order.rs
