[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
anyhow = "1.0.43"

domain = { path = "../domain" }
infra = { path = "../infra" }
usecase = { path = "../usecase" }
registry = { path = "../registry" }
controller = { path = "../controller" }

[build-dependencies]
tonic-build = "0.4"

