[package]
name = "controller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.43"

domain = { path = "../domain" }
usecase = { path = "../usecase" }
registry = { path = "../registry" }

[build-dependencies]
tonic-build = "0.4"

