[package]
name = "registry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8.9"

domain = { path = "../domain" }
usecase = { path = "../usecase" }
infra = { path = "../infra" }

